Closed
Bug 14090
Opened 26 years ago
Closed 23 years ago
table border looks inset on white background in quirks mode
Categories
(Core :: Layout: Tables, defect, P3)
Tracking
()
RESOLVED
FIXED
Future
People
(Reporter: christinehoff4, Assigned: bernd_mozilla)
References
Details
(Keywords: platform-parity, testcase)
Attachments
(6 files)
|
296 bytes,
text/html
|
Details | |
|
640 bytes,
text/html
|
Details | |
|
854 bytes,
patch
|
Details | Diff | Splinter Review | |
|
368 bytes,
text/html
|
Details | |
|
723 bytes,
text/html
|
Details | |
|
2.87 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
Using 9/16 Apprunner on Win 95, Win 98, Win NT, Mac8.5 and Linux Red Hat 6.0.
Open the attached test case. The table border attribute has a value of "20".
Expected result: Border to display with "outset" style.
Actual results:
Win 95: okay
Mac8.5: okay
Linux: okay
Win NT: Border is completely shaded and appears to be inset
Win 98: Border is completely shaded and appears to be inset
| Reporter | ||
Comment 1•26 years ago
|
||
Updated•26 years ago
|
Assignee: karnaze → peterl
Comment 2•26 years ago
|
||
Peter, nsHTMLTableElement::MapAttributes passes NS_STYLE_BORDER_STYLE_BG_OUTSET
to MapTableBorderInto which sets that value on the border-style. It does this
since border is present on the table and the html attribute bordercolor is not.
The border color is showing up gray instead of lime probably because the
border-style is not being set to NS_STYLE_BORDER_STYLE_OUTSET. If I should be
doing this let me know when (MapAttributesInto is not the right time). Or should
you be making the change (only from the quirk value) whenever border-color gets
set.
Comment 5•26 years ago
|
||
Comment 6•26 years ago
|
||
Reassigning peterl's bugs to myself.
Comment 7•26 years ago
|
||
Accepting peterl's bugs that have a Target Milestone
Comment 8•26 years ago
|
||
Pushing my M15 bugs to M16
Updated•26 years ago
|
Summary: [PP]Border displaying differently on Win NT and Win 98 → Border displaying differently on Win NT and Win 98
Comment 9•26 years ago
|
||
Comment 10•26 years ago
|
||
aResult[0] returns the light shade color and aResult[1] returns the dark shade
color. Current nsColor.cpp line 209 and 220 seem to be opposite.
Comment 11•25 years ago
|
||
My apologies to <VYV03354@nifty.ne.jp>, I didn't notice you had proposed a fix.
Style & Tables -> reassigned to attinasi.
Assignee: pierre → attinasi
Status: ASSIGNED → NEW
Updated•25 years ago
|
Status: NEW → ASSIGNED
Comment 12•25 years ago
|
||
I am not seeing different behavior between Window NT and Linux. Furthermore, on
both Linux and NT the behavior of the testcase is correct for the testcasees
posted (border is outset). I am unclear as to what the perceived problem is
here, and I do not understand why the proposed patch would solve any problems...
I may be missing something, but from what I see (coming onto this bug late) we
are putting an OUTSET border, width of 20, on the table. The border color is the
default (based on the background color) when in NavQuirks mode, and is green
when in Standard mode. This is all as expected.
VYV03354@nifty.ne.jp, thanks for the patch but I don't think we need it at this
time since the behavior appears to be correct.
I'm marking this bug as WORKSFORME based on the reasnons stated above. If I am
missing something please inform me and re-open the bug.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → WORKSFORME
| Reporter | ||
Comment 14•25 years ago
|
||
Took the color out to narrow the bug. Testing with 9/19 builds:
Open the attachment. The table has default border styling.
Expected results: Table should display the same across platform.
Actual results: On Windows, table displays with 'outset' border; on Mac and
Linux, table displays with 'inset' border
Nav renders border as 'outset'. Reopening bug.
| Reporter | ||
Comment 15•25 years ago
|
||
Comment 16•25 years ago
|
||
Acepting but marking future: we'll get to it post-RTM.
Status: REOPENED → ASSIGNED
Target Milestone: M16 → Future
Comment 17•25 years ago
|
||
*** Bug 63839 has been marked as a duplicate of this bug. ***
Comment 18•25 years ago
|
||
I've attached a testcase and a screen capture of this problem at 63893. Marc,
we're post-nsRTM now, is this something that you think you'll be working on for
mozilla0.9/nsbeta1?
Comment 20•23 years ago
|
||
removing myself from the cc list
Comment 21•23 years ago
|
||
Is this the same as bug http://bugzilla.mozilla.org/show_bug.cgi?id=16946 ?
It'd sure be nice to get it fixed in 1.0RC2...
Comment 22•23 years ago
|
||
any hope of a fix on this? looks like the cc list was blown away.
| Assignee | ||
Comment 23•23 years ago
|
||
The patch from 2000-02-28!!! is correct. I will update the patch as it has
slightly bitrotten.
Assignee: attinasi → bernd_mozilla
Status: ASSIGNED → NEW
Summary: Border displaying differently on Win NT and Win 98 → table border looks inset on white background in quirks mode
| Assignee | ||
Comment 24•23 years ago
|
||
| Assignee | ||
Comment 25•23 years ago
|
||
Attachment #111286 -
Flags: superreview?(bzbarsky)
Attachment #111286 -
Flags: review?(karnaze)
Comment 26•23 years ago
|
||
Comment on attachment 111286 [details] [diff] [review]
patch
> -void NS_Get3DColors(nscolor aResult[2], nscolor aColor);
> -
Leave the blank line, please.
> // To determin colors based on the background brightness
"determine", not "determin".
With those two nits fixed, looks great. r+sr=bzbarsky
Attachment #111286 -
Flags: superreview?(bzbarsky)
Attachment #111286 -
Flags: superreview+
Attachment #111286 -
Flags: review?(karnaze)
Attachment #111286 -
Flags: review+
| Assignee | ||
Comment 27•23 years ago
|
||
fix checked in
Comment 28•23 years ago
|
||
bernd: marking bug fixed ?
| Assignee | ||
Comment 29•23 years ago
|
||
fixed in 2003011208
Status: NEW → RESOLVED
Closed: 25 years ago → 23 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•