fix the color code to make tables in quirks mode on white background to look outset bug 14090 r/sr=bzbarsky